# agent-factory

./: .default.env  .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  LICENSE  Makefile  README.md  docker-compose.dev.yaml  docker-compose.yaml  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  ruff.toml  sitemap.xml  test_runner.py  test_runner_ui.html
.chainlit/: config.toml
.devcontainer/: devcontainer.json
.github/: pull_request_template.md  setup.sh
.github/workflows/: build_push.yaml  docs.yml  lint.yaml  mcp-tests.yaml  tests-pass.yaml  tests.yaml
api/: .env.example  ARCHITECTURE_DOCUMENTATION.md  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
api/src/: index.ts
api/src/config/: index.ts
api/src/constants/: index.ts
api/src/controllers/: agent.controller.ts  evaluation.controller.ts  input.controller.ts  workflow.controller.ts
api/src/helpers/: agent-factory-helpers.ts
api/src/middleware/: error.middleware.ts  logging.middleware.ts
api/src/routes/: agent.routes.ts  evaluation.routes.ts  workflow.routes.ts
api/src/services/: evaluation.service.ts  file.service.ts  process.service.ts
api/src/types/: index.ts
api/src/utils/: evaluation.utils.ts  file.utils.ts  path.utils.ts  stream.utils.ts  streaming.utils.ts
docs/: hello_world.ipynb  index.md  mcp-servers.json  mcp-servers.md
docs/assets/: custom-registry.json
docs/config/: mcp-servers.json
docs/content/: index.md
docs/content/user-guide/: mcp-servers.md
docs/example-agents/post-mortem-agent/: agent.py  agent_eval_trace.json  evaluation_case.json  evaluation_results.json  requirements.txt
docs/getting-started/: hello_world.ipynb  installation.md  multi-turn-conversations.md  newsletter-agent.md  post-mortem-agent.md  quick-start.md  usage.md
docs/sample_workflows/hello_world/: README.md  agent.py  agent_eval_trace.json  (+3 more)
docs/scripts/: __init__.py  generate_mcp_registry.py  generate_mcp_table.py  mcp-test-results.json  test_mcp_servers.py
docs/user-guide/: agent-generation.md  mcp-credentials.md  mcp-servers-template.md  mcp-servers.md  overview.md
eval/: generate_evaluation_case.py  instructions.py  main.py  mcpd_tools.py  run_agent_eval.py  run_generated_agent_evaluation.py
generated_workflows/: INSTRUCTIONS.md  agent.py  agent_trace.json  evaluation_case.yaml  requirements.txt
generated_workflows/latest/: INSTRUCTIONS.md  agent.py  agent_eval_trace.json  agent_factory_raw_output.txt  agent_factory_trace.json  agent_trace.json  evaluation_case.yaml  requirements.txt
getting-started/installation/: index.html
getting-started/multi-turn-conversations/: index.html
getting-started/usage/: index.html
mcps/: available_mcps.md
sample_agents/: README.md  _run_new_agent.sh  code_review.sh  gist.sh  topic2podcast.sh  translate_markdown.sh
sample_workflows/hello_world/: index.html  requirements.txt
scripts/: test_mcp_servers.py  wait_for_mcpd_servers.sh
src/: chainlit_app.py  instructions.py  main.py  prompt.py  tools.py
src/agent/: .dockerignore  Containerfile  README.md  __main__.py  factory_tools.py  instructions.py  pyproject.toml  redis_exporter.py  schemas.py  templates.py  test_client.py  test_client_multi_turn.py  utils.py
src/agent/tools/: README.md  extract_text_from_markdown_or_html.py  generate_database_query_with_llm.py  generate_recipe_from_ingredients.py  plot_pandas_series_line_graph.py
src/agent/utils/: artifact_validation.py  io_utils.py  trace_utils.py
src/agent_factory/: __main__.py  agent_generator.py  callbacks.py  chainlit.py  chainlit_app.py  chainlit_playground.py  config.py  factory_tools.py  generation.py  instructions.py  logging.py  prompt.py  schema.py  schemas.py  sqlite_mdb.json  start.sh  test_client.py  tools.py  utils.py
src/backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
src/backend/alembic/: env.py
src/backend/alembic/versions/: cc3465b1763a_initial_migration.py
src/backend/backend/: celery_app.py  client.py  db.py  logging.py  main.py  schemas.py  settings.py  storage.py  tasks.py  templates.py  utils.py
src/backend/backend/api/: deps.py  router.py  tags.py
src/backend/backend/api/routes/: agents.py  health.py
src/backend/backend/records/: agents.py  base.py  mixins.py
src/backend/backend/repositories/: agents.py  base.py
src/backend/backend/services/: agents.py
src/backend/backend/services/exceptions/: __init__.py  agent_exceptions.py  base_exceptions.py
src/backend/backend/tools/: __init__.py  extract_text_from_url.py  generate_podcast_script_with_llm.py  review_code_with_llm.py  translate_text_with_llm.py
src/backend/tests/: conftest.py  test_api.py  test_services.py
src/playground/: README.md  chainlit_client.py  playground.py  pyproject.toml  templates.py
test/: README.md  test_runner.py
tests/: README.md  conftest.py  test_generated_agents.py  test_generated_traces.py  test_single_turn_generation.py
tests/generated_agent_evaluation/: test_run_agent_evaluation.py
tests/generated_artifacts/: mock_tools.py  test_generated_agents.py  test_generated_traces.py  test_with_mocks.py  tool_mappings.py  tool_mocks.py  tool_validations.py
tests/generation/: requirements_validators.py  test_single_turn_generation.py  use_cases.yaml
tests/tools/: test_search_mcp_servers.py
tests/unit/: conftest.py  test_a2a_client.py  test_a2a_client_utils.py  test_a2a_server_setup.py  test_agent_generator.py  test_artifact_validation.py  test_callbacks.py  test_factory_tools.py  test_io_utils.py  test_mcp_utils.py  test_search_mcp_servers.py  test_storage.py
tests/utils/: non_deterministic_runs.py  retry.py  test_mcp_servers.py
tools/: README.md  available_tools.md  available_tools.py  generate_database_query_with_llm.py  generate_dockerfile.py  generate_podcast_script_with_llm.py
ui/: .gitignore  Dockerfile  README.md  docker-compose.yaml  eslint.config.ts  index.html  package.json  pnpm-lock.yaml
ui/src/: App.vue
user-guide/mcp-credentials/: index.html
user-guide/mcp-servers/: index.html
(+153 files in other folders)
