[build-system]
requires = ["setuptools>=48", "setuptools_scm[toml]>=6.3.1"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-factory"
description = "Agent Factory"
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.13"
dynamic = ["version"]
dependencies = [
    "any-agent[all]==0.24.0",
    "jinja2>=3.1.2",
    "fire>=0.7.0",
    "dotenv>=0.9.9",
    "pyyaml>=6.0.2",
    "mcpm>=1.0.3", # installing a newer version of mcpm conflicts with the current version of chainlit (2.5.5), see dependency-groups below
    "pre-commit>=4.2.0",
    "rich>=14.0.0",
    "autoflake>=2.3.1",
]

[project.urls]
Documentation = "https://mozilla-ai.github.io/agent-factory/"
Issues = "https://github.com/mozilla-ai/agent-factory/issues"
Source = "https://github.com/mozilla-ai/agent-factory"

[project.scripts]
agent-factory = "agent_factory.generation:main"

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]
where = ["src"]
namespaces = false

[tool.setuptools_scm]

[dependency-groups]
dev = [
  { include-group = "docs" },
  { include-group = "lint" },
  { include-group = "tests" },
]

docs = [
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings-python",
]

lint = [
  "pre-commit==4.2.0",
]

tests = [
  "pytest>=8,<9",
  "pytest-sugar>=0.9.6",
  "pytest-lazy-fixtures>=1.1.2",
  "pytest-timeout>=2.4.0",
  "syrupy>=4.9.1",
]
chainlit-demo = [
  "chainlit==2.6.0",
]
