[project]
name = "agent-factory"
description = "A factory for automatically creating agentic workflows."
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "any-agent[all,a2a]==0.25.0",
    "fire~=0.7.0",
    "dotenv>=0.9.9",
    "mcpm>=1.0.3",  # Later versions of mcpm conflict with the current version of chainlit. See dependency-groups below.
    "loguru>=0.7.3",
    "pre-commit>=4.2.0",
    "autoflake==2.3.1",
    "boto3>=1.34.0",
]

[project.urls]
Documentation = "https://mozilla-ai.github.io/agent-factory/"
Issues = "https://github.com/mozilla-ai/agent-factory/issues"
Source = "https://github.com/mozilla-ai/agent-factory"

[build-system]
requires = ["setuptools>=48", "setuptools_scm[toml]>=6.3.1"]
build-backend = "setuptools.build_meta"

[project.scripts]
agent-factory = "agent_factory.agent_generator:main"

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]
where = ["src"]
namespaces = false

[tool.setuptools_scm]

[dependency-groups]
dev = [
  { include-group = "chainlit" },
  { include-group = "docs" },
  { include-group = "lint" },
  { include-group = "tests" },
]

chainlit = [
  "chainlit~=2.6.0",
]

docs = [
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings-python",
]

lint = [
  "pre-commit==4.2.0",
]

tests = [
  "pytest>=8,<9",
  "pytest-sugar>=0.9.6",
  "pytest-lazy-fixtures>=1.1.2",
  "pytest-timeout>=2.4.0",
  "syrupy>=4.9.1",
]
