[project]
name = "agent-factory"
description = "A factory for automatically creating agentic workflows."
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"

[tool.poetry.dependencies]
any-agent = { version = "0.24.0", extras = ["all", "a2a"] }
dotenv = ">=0.9.9"
fire = "~0.7.0"
loguru = ">=0.7.3"
pre-commit = ">=4.2.0"
mcpd = { git = "https://github.com/mozilla-ai/mcpd-sdk-python.git", branch = "kostis-s-z/endpoint" }

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
